maen build with commons jar