@@ -1,6 +1,7 @@
 FROM maven:3.5.2-jdk-8-alpine AS MAVEN_BUILD
 COPY pom.xml /build/
 COPY src /build/src/
+COPY lib /build/lib/
 WORKDIR /build/
 RUN mvn package
 
@@ -8,4 +9,5 @@ RUN mvn package
 FROM openjdk:8-jre-alpine
 WORKDIR /app
 COPY --from=MAVEN_BUILD /build/target/order-1.0.jar /app/
-ENTRYPOINT ["java", "-jar", "order-1.0.jar"]
+COPY --from=MAVEN_BUILD /build/target/lib /app/lib
+ENTRYPOINT ["java", "-Djava.ext.dirs=lib","-jar", "order-1.0.jar"]
